--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@
 YOLOX_outputs/
 #datasets/
 apex/
-data/
+data
+!yolox/data
 
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
